travailler sur le version responsive

--- a/src/components/Advert/Advert.css
+++ b/src/components/Advert/Advert.css
@@ -1,26 +1,27 @@
-.advert-container{
-    background-size: cover;
-    background-position: center;
-    background-repeat: no-repeat;
-    object-fit: cover;
-    margin: 10px;
-    margin-bottom: 50px;
-    width: 27%;
-    height: 340px;
-    padding: 10px;
-    border-radius: 15px;
-    position: relative;
+.advert-container {
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+  -o-object-fit: cover;
+     object-fit: cover;
+  margin: 10px;
+  margin-bottom: 50px;
+  width: 27%;
+  height: 340px;
+  padding: 10px;
+  border-radius: 15px;
+  position: relative;
 }
-.advert-title{
-  
-    position: absolute;
-    bottom: 5px;
-    left: 25px;
-    color: white;
-    font-size: 25px;
 
+.advert-title {
+  position: absolute;
+  bottom: 5px;
+  left: 25px;
+  color: white;
+  font-size: 25px;
 }
-.advert-item{
-    color: white;
-    text-decoration: none;
-}
+
+.advert-item {
+  color: white;
+  text-decoration: none;
+}/*# sourceMappingURL=Advert.css.map */
