--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -1,14 +1,16 @@
-.header-container{
-    padding: 2rem 2.5rem;
-    display: flex;
-    justify-content : space-between;
-    align-items:  center;
+.header-container {
+  padding: 2rem 2.5rem;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
 }
-.nav-bar{
-    display: flex;
-    justify-content: space-between;
+
+.nav-bar {
+  display: flex;
+  justify-content: space-between;
 }
-.nav-bar-item{
-    margin-left: 30px;
-    color: black;
-}
+
+.nav-bar-item {
+  margin-left: 30px;
+  color: #000000;
+}/*# sourceMappingURL=Header.css.map */
