--- a/src/components/404/404.css
+++ b/src/components/404/404.css
@@ -1,35 +1,37 @@
-.error-container{
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
+.error-container {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
 }
 
-.error-container :nth-child(1){
-    font-family: Montserrat;
-    font-size: 288px;
-    font-weight: 700;
-    line-height: 410.69px;
-    text-align: center;
-    color: #FF6060;
-    margin: 0px ;
+.error-container :nth-child(1) {
+  font-family: Montserrat;
+  font-size: 288px;
+  font-weight: 700;
+  line-height: 410.69px;
+  text-align: center;
+  color: #FF6060;
+  margin: 0px;
 }
-.error-container :nth-child(2){
-    font-family: Montserrat;
-    font-size: 36px;
-    font-weight: 500;
-    line-height: 51.34px;
-    text-align: left;
-    color: #FF6060;
-    width: 872px;
-    height: 51px;
-    gap: 0px;
-    opacity: 0px;
+
+.error-container :nth-child(2) {
+  font-family: Montserrat;
+  font-size: 36px;
+  font-weight: 500;
+  line-height: 51.34px;
+  text-align: left;
+  color: #FF6060;
+  width: 872px;
+  height: 51px;
+  gap: 0px;
+  opacity: 0px;
 }
-.error-container :nth-child(3){
-    font-family: Montserrat;
-    font-size: 18px;
-    font-weight: 500;
-    line-height: 25.67px;
-    text-align: left;
-}
+
+.error-container :nth-child(3) {
+  font-family: Montserrat;
+  font-size: 18px;
+  font-weight: 500;
+  line-height: 25.67px;
+  text-align: left;
+}/*# sourceMappingURL=404.css.map */
