--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -1,12 +1,13 @@
-.footer{
-    background: black;
-    color: white;
-    padding: 40px;
-    padding-bottom: 7px;
-    text-align: center;
-    margin-top: 40px;
+.footer {
+  background: black;
+  color: white;
+  padding: 40px;
+  padding-bottom: 7px;
+  text-align: center;
+  margin-top: 40px;
 }
-.logoFooter{
-    width: 80px;
-    color: white;
-}
+
+.logoFooter {
+  width: 80px;
+  color: white;
+}/*# sourceMappingURL=Footer.css.map */
