--- a/src/components/Home/Home.css
+++ b/src/components/Home/Home.css
@@ -1,19 +1,23 @@
-.home-container{
-    text-align: center;
-    margin: auto;
-    position: relative;
+.home-container {
+  text-align: center;
+  margin: auto;
+  position: relative;
+ 
 }
-.header-image{
-    width: 95%;
-    height: 200px;
-    object-fit: cover;
-    border-radius: 15px;
+
+.header-image {
+  width: 95%;
+  height: 200px;
+  -o-object-fit: cover;
+     object-fit: cover;
+  border-radius: 15px;
 }
-.header-text{
-    font-size: 30px;
-    color: white;
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -100%);
-}
+
+.header-text {
+  font-size: 30px;
+  color: white;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -100%);
+}/*# sourceMappingURL=Home.css.map */
