--- a/src/components/Selection/Selection.css
+++ b/src/components/Selection/Selection.css
@@ -1,40 +1,43 @@
-.norm{
-    display: flex;
-    justify-content: space-between;
-    padding: 12px 5px; border-radius: 5px;
-    margin: 0px;
-    background-color:#FF6060;
-    color: rgb(255, 255, 255);
-    cursor: pointer;
-    width: 100%;
-    font-size: 24px;
-    text-align: center;
-    font-family: 'montserrat';
-    
+.norm {
+  display: flex;
+  justify-content: space-between;
+  padding: 12px 5px;
+  border-radius: 5px;
+  margin: 0px;
+  background-color: #FF6060;
+  color: rgb(255, 255, 255);
+  cursor: pointer;
+  width: 100%;
+  font-size: 24px;
+  text-align: center;
+  font-family: "montserrat";
 }
-.hidden{
-    display: none;
+
+.hidden {
+  display: none;
 }
-.content{    
-    font-family: Montserrat;
-    bottom: 20px;
-    font-size: 18px;
-    font-weight: 400;
-    line-height: 25.67px;
-    text-align: left;
-    padding: 12px 25px;
-    border-radius: 5px;
-    margin: 0px;
-    background-color:#f6f6f673;
-    cursor: pointer;
-    width: 100%;
-    text-align: center;  
-    transition: all 3s ease-in-out;;
+
+.content {
+  font-family: Montserrat;
+  bottom: 20px;
+  font-size: 18px;
+  font-weight: 400;
+  line-height: 25.67px;
+  text-align: left;
+  padding: 12px 25px;
+  border-radius: 5px;
+  margin: 0px;
+  background-color: rgba(246, 246, 246, 0.4509803922);
+  cursor: pointer;
+  width: 100%;
+  text-align: center;
+  transition: all 3s ease-in-out;
 }
-.selection-container{
-    padding: 30px 2.5rem;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-wrap: wrap;
-}
+
+.selection-container {
+  padding: 30px 2.5rem;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-wrap: wrap;
+}/*# sourceMappingURL=Selection.css.map */
