--- a/src/components/Card/Card.css
+++ b/src/components/Card/Card.css
@@ -24,4 +24,4 @@
 .advert-item {
   color: white;
   text-decoration: none;
-}/*# sourceMappingURL=Advert.css.map */
+}/*# sourceMappingURL=Card.css.map */
