--- a/src/components/Detail/Detail.scss
+++ b/src/components/Detail/Detail.scss
@@ -1,22 +1,39 @@
 .detail-container{
     margin: auto;
-    text-align: center
+    text-align: center;
+    width:90%;
+    max-width: 1240px;
 }
 .detail-img{
-    width: 95%;
+    width: 100%;
     height: 415px;
     object-fit: cover;
     border-radius: 15px;
 }
-
+.detail-infos{
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  width: 90%;
+  max-width: 1240px;
+  margin: auto;
+  padding: 30px 0px 24px 0px;
+}
 .detail-content{
     font-family: Montserrat;
     display: flex;
     flex-direction: row;
     justify-content: space-between;
-    padding: 10px 39px;
-    // margin-top: 20px;
- 
+    align-items: flex-start;
+    display: flex;
+    flex-direction: column; 
+}
+.tagAndRating{
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  display: flex;
+  flex-direction: column;
 }
 .detail-content h1{
   color: #FF6060;
@@ -26,12 +43,14 @@
   margin: auto;
 }
 .detail-content p{
-  font-weight: 500;
+  font-family: Montserrat;
   font-size: 18px;
+  font-weight: 500;
   line-height: 26px;
   margin: auto;
+  line-height: 24px;
+  margin-bottom: 20px;
 }
-
 .host-detail{
     display: flex;
     flex-direction: row;
@@ -42,28 +61,19 @@
   font-family:Montserrat;
   font-weight: 500;
   font-size: 18px;
-  // line-height: 26px;
   text-align: right;
   width: min-content;
-    margin-right: 10px;
-
+  margin-right: 10px;
 }
 
-.picture-host img{
-   
+.picture-host img{   
     width: 64px;
     height: 64px;
     border-radius: 50%;
     object-fit: cover;
     border: 2px solid ;
+}
 
-}
-.tagAndRating{
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-    padding: 10px 39px;
-}
 .tag{
     display: flex;
      gap: 0.5rem;    
@@ -71,36 +81,116 @@
 
 .rating {
     display: flex;
-    place-items: center;
+    justify-content: space-between;
 }
-/* //******************************* */
+
 .carousel {
     position: relative;
-  }
+}
   
-  .carousel-inner {
+.carousel-inner {
     position: relative;
-  }
+    width: 100%;
+    max-width: 1240px;
+    margin: auto;
+}
   
-  .carousel-control {
+.carousel-control {
     position: absolute;
     top: 50%;
-    transform: translateY(-50%);
-    
+    transform: translateY(-50%);    
     color: rgb(255, 255, 255);
     border: none;
     padding: 10px;
-    font-size: 76px;
- 
+    font-size: 76px; 
     cursor: pointer;
-  }
+}
   
-  .prev {
+.prev {
     left: 30px;
-  }
+}
   
-  .next {
-    right: 30px;
-  }
+.next {
+  right: 30px;
+}
+.image-counter {
+  position: absolute;
+  bottom: 10px;
+  left: 50%;
+  transform: translateX(-50%);
+  color: white;
+  font-weight: bold;
+  font-family: Montserrat;
+  font-size: 18px;
+  font-weight: 500;
+  line-height: 80px;
+  text-align: center;
+}
   
-  
+@media (max-width: 768px) {
+    .carousel-inner {
+    position: relative;
+    width: 100%;    
+    }
+   .detail-img{
+    width: 100%;
+}
+
+.detail-infos{
+  display: flex;
+  flex-direction: column;
+  margin: auto;
+  padding: 15px 0px 24px 0px;
+}
+ 
+.detail-content h1{
+  font-family: Montserrat;
+  font-size: 18px;
+  font-weight: 500;
+  line-height: 25.67px;
+  text-align: left;
+}
+ 
+.detail-content p{
+font-family: Montserrat;
+font-size: 14px;
+font-weight: 500;
+line-height: 19.96px;
+text-align: left;
+margin-top: 5px;
+margin-bottom: 10px;
+
+}
+ 
+.tagAndRating{
+  display: flex;
+  flex-direction: row-reverse;
+  justify-content: space-between;
+  align-items: center;
+}
+  .star{
+    height: 18px;
+}
+  .host-detail p{
+    font-size: 12px;
+    font-weight: 500;
+    line-height: 18px;
+    text-align: right;    
+}
+  .picture-host img{
+    width: 45px;
+    height: 45px;
+    top: 0.5px;
+    left: 103.5px;
+    gap: 0px;
+     
+}
+.prev , .next  {
+  width: 40px;
+  height: 40px;
+}
+.image-counter {
+  display: none;
+}
+
+}
