--- a/src/components/Footer/Footer.scss
+++ b/src/components/Footer/Footer.scss
@@ -1,12 +1,21 @@
 .footer{
     background: black;
     color: white;
-    padding: 40px;
+    padding: 66px;
     padding-bottom: 7px;
     text-align: center;
     margin-top: 40px;
 }
+.footer p{
+    font-family: Montserrat;
+    font-size: 24px;
+    font-weight: 500;
+    line-height: 34.22px;
+    text-align: center;    
+}
 .logoFooter{
-    width: 80px;
+    width: 122px;
+    height: 40px;
     color: white;
+    margin-bottom: 10px;
 }
