--- a/src/components/About/About.css
+++ b/src/components/About/About.css
@@ -1,10 +1,10 @@
-.APropos-header {
+.About-header {
   text-align: center;
   margin: auto;
   position: relative;
 }
 
-.APropos-header img {
+.About-header img {
   width: 95%;
   height: 200px;
   -o-object-fit: cover;
@@ -12,9 +12,9 @@
   border-radius: 15px;
 }
 
-.APropos-container {
+.About-container {
   width: 80%;
   margin: auto;
   margin-top: 30px;
   text-align: center;
-}/*# sourceMappingURL=APropos.css.map */
+}/*# sourceMappingURL=About.css.map */
