--- a/src/components/Gallery/Gallery.scss
+++ b/src/components/Gallery/Gallery.scss
@@ -1,24 +1,28 @@
-.menu{
+.gallery{
     background:  #F6F6F6;
     height: auto;
     display: flex;
     flex-direction: row;
     justify-content:space-evenly;
     align-items:center;
-    flex-wrap:wrap;
-    // width:1240px;
-    // margin:auto;
-    // margin-top: 43px;    
+    flex-wrap:wrap;     
     width: 90%; // Utiliser une largeur en pourcentage pour s'adapter à la taille de l'écran
     max-width: 1240px; // Définir une largeur maximale pour les grands écrans
     margin: 43px auto 0; // Centrer horizontalement
     border-radius: 25px;
     padding: 56px 0px;
 }
-.menu-item {
+.gallery-item {
     margin: 40px 0;
   
     @media (max-width: 768px) {
       margin: 20px 0; // Réduire la marge verticale sur les petits écrans
     }
   }
+  @media (max-width: 833px) {
+  .gallery {
+    padding:  0px;
+    background-color: white;
+  }
+  }
+      
