--- a/src/components/Home/Home.scss
+++ b/src/components/Home/Home.scss
@@ -18,13 +18,8 @@
     top: 50%;
     left: 50%;
     transform: translate(-50%, -120%);
-    // width: 733px;
-    // height: 68px;
-    //  font-size: 48px;
     width: 100%;
-    font-size: 48px;
-
-   
+    font-size: 48px;   
     font-weight: 700;
     font-family: 'Montserrat';
 }
@@ -34,4 +29,7 @@
       text-align: start;
       margin-left: 16px;
     }
+    .header-image{
+        border-radius: 10px;
+            }
   }
