--- a/src/components/Photographer/Photographer.scss
+++ b/src/components/Photographer/Photographer.scss
@@ -1,20 +1,35 @@
 .tag-container{
         background-color:  #FF6060;
         text-align: center;
-        border-radius: 15px;
+        border-radius: 10px;
         color: white;
         padding: 0px 20px;
+        font-family: Montserrat;
+        font-weight: 700;
+        font-size: 14px;
+        height: 25px;
 }
 .photographer-detail-container{
         display: flex;
-        width: 100%;
+        width: 90%;
+        max-width: 1240px;
+        margin: auto;
+        gap: 76px;
 }
 .photographer-detail-container > div {
         width: 50%;
       }
 .photographer-detail-container p {
-text-align: start;
+        text-align: start;
 }
-// .photographer-header{
-        
-// }
+
+@media (max-width: 768px) {
+        .photographer-detail-container {
+                display: flex;
+                gap: 20px;
+                flex-direction: column;
+            }
+            .photographer-detail-container > div {
+                width: 100%;
+            }
+}
