--- a/src/components/About/About.scss
+++ b/src/components/About/About.scss
@@ -1,27 +1,41 @@
-.About-header{
-    text-align: center;
-    margin: auto;
-    position: relative;
-    width: 90%;
-    max-width: 1240px;
-}
-.About-header img{
+
+
+// Variables
+$header-width: 90%;
+$max-header-width: 1240px;
+$img-height: 200px;
+$img-border-radius: 15px;
+$container-width: 70%;
+$container-margin-top: 38px;
+$gap: 30px;
+$mobile-container-width: 90%;
+$mobile-breakpoint: 768px;
+
+.About-header {
+  text-align: center;
+  margin: auto;
+  position: relative;
+  width: $header-width;
+  max-width: $max-header-width;
+
+  img {
     width: 100%;
-    height: 200px;
+    height: $img-height;
     object-fit: cover;
-    border-radius: 15px;
+    border-radius: $img-border-radius;
+  }
 }
-.About-container{
-    width: 70%;
-    margin: auto;
-    margin-top: 38px;
-    text-align: center;
-    display: flex;
-    flex-direction: column;
-    gap: 30px;
-}
-@media (max-width: 768px) {
-    .About-container{
-        width: 90%;
-    }
+
+.About-container {
+  width: $container-width;
+  margin: auto;
+  margin-top: $container-margin-top;
+  text-align: center;
+  display: flex;
+  flex-direction: column;
+  gap: $gap;
+
+  @media (max-width: $mobile-breakpoint) {
+    width: $mobile-container-width;
+  }
 }
