--- a/src/components/Detail/Detail.scss
+++ b/src/components/Detail/Detail.scss
@@ -1,82 +1,104 @@
-.detail-container{
+
+
+// Variables
+$primary-color: #FF6060;
+$font-family: 'Montserrat', sans-serif;
+$max-width: 1240px;
+$border-radius: 15px;
+$font-size-h1: 36px;
+$line-height-h1: 52px;
+$font-size-p: 18px;
+$line-height-p: 26px;
+$font-weight-medium: 500;
+$mobile-breakpoint: 768px;
+
+.detail-container {
     margin: auto;
     text-align: center;
-    width:90%;
-    max-width: 1240px;
+    width: 90%;
+    max-width: $max-width;
 }
-.detail-img{
+
+.detail-img {
     width: 100%;
     height: 415px;
     object-fit: cover;
-    border-radius: 15px;
+    border-radius: $border-radius;
 }
-.detail-infos{
-  display: flex;
-  flex-direction: row;
-  justify-content: space-between;
-  width: 90%;
-  max-width: 1240px;
-  margin: auto;
-  padding: 30px 0px 24px 0px;
+
+.detail-infos {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    width: 90%;
+    max-width: $max-width;
+    margin: auto;
+    padding: 30px 0 24px;
 }
-.detail-content{
-    font-family: Montserrat;
+
+.detail-content {
+    font-family: $font-family;
     display: flex;
     flex-direction: row;
     justify-content: space-between;
     align-items: flex-start;
     display: flex;
-    flex-direction: column; 
+    flex-direction: column;
 }
-.tagAndRating{
-  display: flex;
-  flex-direction: row;
-  justify-content: space-between;
-  display: flex;
-  flex-direction: column;
+
+.tagAndRating {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    display: flex;
+    flex-direction: column;
 }
-.detail-content h1{
-  color: #FF6060;
-  font-weight: 500;
-  font-size: 36px;
-  line-height: 52px;
-  margin: auto;
+
+.detail-content h1 {
+    color: $primary-color;
+    font-weight: $font-weight-medium;
+    font-size: $font-size-h1;
+    line-height: $line-height-h1;
+    margin: auto;
 }
-.detail-content p{
-  font-family: Montserrat;
-  font-size: 18px;
-  font-weight: 500;
-  line-height: 26px;
-  margin: auto;
-  line-height: 24px;
-  margin-bottom: 20px;
+
+.detail-content p {
+    font-family: $font-family;
+    font-size: $font-size-p;
+    font-weight: $font-weight-medium;
+    line-height: $line-height-p;
+    margin: auto;
+    line-height: 24px;
+    margin-bottom: 20px;
 }
-.host-detail{
+
+.host-detail {
     display: flex;
     flex-direction: row;
     align-items: center;
 }
-.host-detail p{
-  color: #FF6060;
-  font-family:Montserrat;
-  font-weight: 500;
-  font-size: 18px;
-  text-align: right;
-  width: min-content;
-  margin-right: 10px;
+
+.host-detail p {
+    color: $primary-color;
+    font-family: $font-family;
+    font-weight: $font-weight-medium;
+    font-size: $font-size-p;
+    text-align: right;
+    width: min-content;
+    margin-right: 10px;
 }
 
-.picture-host img{   
+.picture-host img {
     width: 64px;
     height: 64px;
     border-radius: 50%;
     object-fit: cover;
-    border: 2px solid ;
+    border: 2px solid;
 }
 
-.tag{
+.tag {
     display: flex;
-     gap: 0.5rem;    
+    gap: 0.5rem;
 }
 
 .rating {
@@ -87,110 +109,115 @@
 .carousel {
     position: relative;
 }
-  
+
 .carousel-inner {
     position: relative;
     width: 100%;
-    max-width: 1240px;
+    max-width: $max-width;
     margin: auto;
 }
-  
+
 .carousel-control {
     position: absolute;
     top: 50%;
-    transform: translateY(-50%);    
+    transform: translateY(-50%);
     color: rgb(255, 255, 255);
     border: none;
     padding: 10px;
-    font-size: 76px; 
+    font-size: 76px;
     cursor: pointer;
 }
-  
+
 .prev {
     left: 30px;
 }
-  
+
 .next {
-  right: 30px;
+    right: 30px;
 }
+
 .image-counter {
-  position: absolute;
-  bottom: 10px;
-  left: 50%;
-  transform: translateX(-50%);
-  color: white;
-  font-weight: bold;
-  font-family: Montserrat;
-  font-size: 18px;
-  font-weight: 500;
-  line-height: 80px;
-  text-align: center;
+    position: absolute;
+    bottom: 10px;
+    left: 50%;
+    transform: translateX(-50%);
+    color: white;
+    font-weight: bold;
+    font-family: $font-family;
+    font-size: $font-size-p;
+    font-weight: $font-weight-medium;
+    line-height: 80px;
+    text-align: center;
 }
-  
-@media (max-width: 768px) {
+
+@media (max-width: $mobile-breakpoint) {
     .carousel-inner {
-    position: relative;
-    width: 100%;    
+        position: relative;
+        width: 100%;
     }
-   .detail-img{
-    width: 100%;
-}
 
-.detail-infos{
-  display: flex;
-  flex-direction: column;
-  margin: auto;
-  padding: 15px 0px 24px 0px;
-}
- 
-.detail-content h1{
-  font-family: Montserrat;
-  font-size: 18px;
-  font-weight: 500;
-  line-height: 25.67px;
-  text-align: left;
-}
- 
-.detail-content p{
-font-family: Montserrat;
-font-size: 14px;
-font-weight: 500;
-line-height: 19.96px;
-text-align: left;
-margin-top: 5px;
-margin-bottom: 10px;
+    .detail-img {
+        width: 100%;
+    }
 
-}
- 
-.tagAndRating{
-  display: flex;
-  flex-direction: row-reverse;
-  justify-content: space-between;
-  align-items: center;
-}
-  .star{
-    height: 18px;
-}
-  .host-detail p{
-    font-size: 12px;
-    font-weight: 500;
-    line-height: 18px;
-    text-align: right;    
-}
-  .picture-host img{
-    width: 45px;
-    height: 45px;
-    top: 0.5px;
-    left: 103.5px;
-    gap: 0px;
-     
-}
-.prev , .next  {
-  width: 40px;
-  height: 40px;
-}
-.image-counter {
-  display: none;
-}
+    .detail-infos {
+        display: flex;
+        flex-direction: column;
+        margin: auto;
+        padding: 15px 0 24px;
+    }
 
+    .detail-content h1 {
+        font-family: $font-family;
+        font-size: 18px;
+        font-weight: $font-weight-medium;
+        line-height: 25.67px;
+        text-align: left;
+    }
+
+    .detail-content p {
+        font-family: $font-family;
+        font-size: 14px;
+        font-weight: $font-weight-medium;
+        line-height: 19.96px;
+        text-align: left;
+        margin-top: 5px;
+        margin-bottom: 10px;
+    }
+
+    .tagAndRating {
+        display: flex;
+        flex-direction: row-reverse;
+        justify-content: space-between;
+        align-items: center;
+    }
+
+    .star {
+        height: 18px;
+    }
+
+    .host-detail p {
+        font-size: 12px;
+        font-weight: $font-weight-medium;
+        line-height: 18px;
+        text-align: right;
+    }
+
+    .picture-host img {
+        width: 45px;
+        height: 45px;
+        top: 0.5px;
+        left: 103.5px;
+        gap: 0;
+    }
+
+    .prev,
+    .next {
+        width: 40px;
+        height: 40px;
+    }
+
+    .image-counter {
+        display: none;
+    }
 }
