--- a/src/components/Gallery/Gallery.scss
+++ b/src/components/Gallery/Gallery.scss
@@ -1,28 +1,40 @@
-.gallery{
-    background:  #F6F6F6;
+
+
+
+$background-color: #F6F6F6;
+$max-width: 1240px;
+$margin-top: 43px;
+$border-radius: 25px;
+$padding-vertical: 35px;
+$margin-vertical: 40px;
+$small-screen-max-width: 768px;
+$small-screen-margin-vertical: 20px;
+$medium-screen-max-width: 833px;
+
+.gallery {
+    background: $background-color;
     height: auto;
     display: flex;
     flex-direction: row;
-    justify-content:space-evenly;
-    align-items:center;
-    flex-wrap:wrap;     
+    justify-content: space-evenly;
+    align-items: center;
+    flex-wrap: wrap;
     width: 90%; // Utiliser une largeur en pourcentage pour s'adapter à la taille de l'écran
-    max-width: 1240px; // Définir une largeur maximale pour les grands écrans
-    margin: 43px auto 0; // Centrer horizontalement
-    border-radius: 25px;
-    padding: 56px 0px;
-}
-.gallery-item {
-    margin: 40px 0;
-  
-    @media (max-width: 768px) {
-      margin: 20px 0; // Réduire la marge verticale sur les petits écrans
+    max-width: $max-width; // Définir une largeur maximale pour les grands écrans
+    margin: $margin-top auto 0; // Centrer horizontalement
+    border-radius: $border-radius;
+    padding: $padding-vertical 0;
+
+    &-item {
+        margin: $margin-vertical 0;
+
+        @media (max-width: $small-screen-max-width) {
+            margin: $small-screen-margin-vertical 0; // Réduire la marge verticale sur les petits écrans
+        }
     }
-  }
-  @media (max-width: 833px) {
-  .gallery {
-    padding:  0px;
-    background-color: white;
-  }
-  }
-      
+
+    @media (max-width: $medium-screen-max-width) {
+        padding: 0;
+        background-color: white;
+    }
+}
